[Fix] align

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,5 +1,5 @@
 body {
   background-color: #151515;
   color: #f5f5f5;
-  align-items: center;
+  text-align: center;
 }
